--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 # To get compile cleaned data used in the report, download the original UNEDITED dataset and place it in the dataset folder
 # Then, run the master.ipy
 dataset/
+log/
+# Logs are for debugging purposes
