Done a lot. Too much to list here. Essentially its shaping to be a proper project by now.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 dataset/
 log/
 # Logs are for debugging purposes
+# Including the report to avoid publishing sensitive information
+report.html
+report.qmd
+report/
+report_files/
